@@ -100,9 +100,9 @@ ret = reader.Read()
 while ret == 1:
     if reader.Name() == "ref":
         if reader.LookupNamespace("a") != "urn:456":
-	    print "error resolving namespace prefix"
-	    sys.exit(1)
-	break
+            print "error resolving namespace prefix"
+            sys.exit(1)
+        break
     ret = reader.Read()
 if ret != 1:
     print "Error finding the ref element"
@@ -301,14 +301,14 @@ def tst_reader(s):
     reader = input.newTextReader("tst")
     res = ""
     while reader.Read():
-	res=res + "%s (%s) [%s] %d %d\n" % (reader.NodeType(),reader.Name(),
-				      reader.Value(), reader.IsEmptyElement(),
-				      reader.Depth())
-	if reader.NodeType() == 1: # Element
-	    while reader.MoveToNextAttribute():
-		res = res + "-- %s (%s) [%s] %d %d\n" % (reader.NodeType(),
-				       reader.Name(),reader.Value(),
-				       reader.IsEmptyElement(), reader.Depth())
+        res=res + "%s (%s) [%s] %d %d\n" % (reader.NodeType(),reader.Name(),
+                                      reader.Value(), reader.IsEmptyElement(),
+                                      reader.Depth())
+        if reader.NodeType() == 1: # Element
+            while reader.MoveToNextAttribute():
+                res = res + "-- %s (%s) [%s] %d %d\n" % (reader.NodeType(),
+                                       reader.Name(),reader.Value(),
+                                       reader.IsEmptyElement(), reader.Depth())
     return res
     
 doc="""<a><b b1="b1"/><c>content of c</c></a>"""
