@@ -37,14 +37,14 @@ while i > 0:
     res = ctxt.xpathEval("foo(1)")
     if res != 2:
         print "xpath extension failure"
-	sys.exit(1)
+        sys.exit(1)
     i = i - 1
 i = 10000
 while i > 0:
     res = ctxt.xpathEval("bar(1)")
     if res != "3":
         print "xpath extension failure got %s expecting '3'"
-	sys.exit(1)
+        sys.exit(1)
     i = i - 1
 doc.freeDoc()
 ctxt.xpathFreeContext()
