@@ -1,3 +1,8 @@
+Mon Feb 23 11:52:12 CET 2004 Daniel Veillard <daniel@veillard.com>
+
+	* python/tests/*.py: applied patch from Malcolm Tredinnick
+	  to avoid tabs in python sources, should fix #135095
+
 Sun Feb 22 23:16:23 CET 2004 Daniel Veillard <daniel@veillard.com>
 
 	* testSAX.c: add --timing option
